--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "tsc:w": "tsc -w",
     "lite": "lite-server",
     "start": "concurrent \"npm run tsc:w\" \"npm run lite\" ",
-    "typings" : "typings"
+    "typings": "typings"
   },
   "license": "ISC",
   "dependencies": {
@@ -21,8 +21,10 @@
   },
   "devDependencies": {
     "concurrently": "^1.0.0",
+    "eslint": "^2.8.0",
+    "eslint-config-google": "^0.5.0",
     "lite-server": "^2.0.1",
     "typescript": "^1.7.5",
-    "typings":"^0.6.8"
+    "typings": "^0.6.8"
   }
 }
